# internal_docs

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/linters/: .markdownlint.yaml
.github/workflows/: ci.yml  mkdocs
current_system/: index.html
current_system/codebase/: index.html
current_system/codebase/anyall/: index.html
current_system/codebase/architecture/: index.html
current_system/codebase/baby_L4/: index.html
current_system/codebase/devops/: index.html
current_system/codebase/explainable/: index.html
current_system/codebase/generic_mathlang/: index.html
current_system/codebase/mathlang/: index.html
current_system/codebase/natural4/: index.html
current_system/codebase/nlg/: index.html
current_system/codebase/rule_ast/: index.html
current_system/codebase/visualizations/: index.html
current_system/logicalenglish/: index.html
current_system/other_experiments/: index.html
current_system/webforms/: index.html
docs/: further_reading.md  future_aspirations.md  historical_context.md  index.md  misc.md  requirements.md
docs/current_system/: index.md  logicalenglish.md  other_experiments.md  webforms.md
docs/current_system/codebase/: anyall.md  architecture.md  babyL4.md  baby_L4.md  devops.md  explainable.md  generic_mathlang.md  index.md  mathlang.md  natural4.md  nlg.md  other_experiments.md  rule-ast.md  rule_ast.md  (+1 more)
further_reading/: index.html
future_aspirations/: index.html
historical_context/: index.html
misc/: index.html
search/: search_index.json
