[tool.poetry]
name = "internal-docs"
version = "0.1.0"
description = "Internal docs for L4 development"
authors = ["SMUCCLAW"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.5.22"
mkdocs-awesome-pages-plugin = "^2.9.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
